# ComfyUI-Egregora-Frames-Animation-Nodes

./: LICENSE  README.md  __init__.py  egregora_frames_animation_nodes.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
