[project]
name = "egregora-frames-animation-nodes"
description = "Advanced image list animation toolkit for ComfyUI with batch processing, AI-powered frame interpolation, and multi-format video encoding."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch>=2.0.0", "numpy>=1.24.0", "Pillow>=10.0.0", "opencv-python>=4.8.0", "imageio>=2.31.0", "imageio-ffmpeg>=0.4.9", "requests>=2.31.0", "# Optional AI interpolation models", "# Uncomment to enable RIFE/FILM support", "# torch-rife", "# film-net"]

[project.urls]
Repository = "https://github.com/lucasgattas/ComfyUI-Egregora-Frames-Animation-Nodes"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/lucasgattas/ComfyUI-Egregora-Frames-Animation-Nodes/wiki"
"Bug Tracker" = "https://github.com/lucasgattas/ComfyUI-Egregora-Frames-Animation-Nodes/issues"

[tool.comfy]
PublisherId = "mrgattax"
DisplayName = "ComfyUI-Egregora-Frames-Animation-Nodes"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

